# seek

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  sync.yml
data/: index.json
scripts/: sync.py
tests/: test_sync.py
